--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ torchvision>=0.9.0
 tqdm>=4.64.0
 ultralytics>=8.0.147
 streamlit-camera-input-live>=0.2.0
+roboflow>=1.1.5
 # protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
 
 # Logging ---------------------------------------------------------------------
